[package]
name = "blog_os"
version = "0.1.0"
authors = ["Alex"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
volatile = "0.2.3"
spin = "0.4.6"

[dev-dependencies]
array-init = "0.0.3"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
default-target =  "x86_64-blog_os.json"
